# hook

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
config/moodle/: Dockerfile  apache_virtual_host.conf  config.php
config/mysql/: webservices.sh
hook/: __init__.py  conf.py  main.py
swarmoodle/: .dockerignore  Dockerfile  pyproject.toml  tox.ini
swarmoodle/swarmoodle/: __init__.py  conf.py  locustfile.py  moodle.py  oulad.py
swarmoodle/tests/: test_conf.py  test_moodle.py  test_oulad.py
swarmoodle/tests/OULAD/: assessments.csv  courses.csv  studentAssessment.csv  studentInfo.csv  studentRegistration.csv  studentVle.csv  vle.csv
tests/: conftest.py  test_main.py
