#
# Hook package
#
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hook"
description = "Human Open Online Knowledge"
readme = "README.md"
authors = [
  { name="SergioSim", email="sergio.simonian@etu.univ-cotedazur.fr" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
license = {file = "LICENSE.md"}
keywords = ["Hook", "Analytics"]
dependencies = [
    "fastapi==0.103.1",
    "uvicorn[standard]==0.23.2",
    "httpx==0.25.0",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/SergioSim/hook"
"Bug Tracker" = "https://github.com/SergioSim/hook/issues"

[project.optional-dependencies]
dev = [
    "asgi-lifespan==2.1.0",
    "bandit==1.7.5",
    "black==23.9.1",
    "flake8==6.1.0",
    "isort==5.12.0",
    "pydocstyle==6.3.0",
    "pylint==2.17.5",
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
    "pytest-httpx==0.26.0",
]

[tool.setuptools]
packages = ["hook"]

[tool.setuptools.dynamic]
version = { attr = "hook.__version__" }

#
# Third-party packages configuration
#

[tool.pydocstyle]
convention = "google"

[tool.isort]
skip_glob = "venv"
profile = "black"

# Third party packages configuration
[tool.pytest.ini_options]
addopts = "-v --cov-report term-missing --cov=hook"
python_files = [
    "test_*.py",
    "tests.py",
]
testpaths = [
    "tests",
]
